<resources>

    <string name="app_name">Basic Login App</string>
    <string name="action_settings">Settings</string>
    <string name="label_login">Login</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="bottom_text">Akademik Bilisim</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="action_exit">Exit</string>
    <string name="title_activity_data_parse">DataParse</string>
    <string name="title_activity_data_model">DataModel</string>
    <string name="label_id">Id</string>


</resources>
